Set up JJ's server
Had to template out sshd_config to fix an sftp bug, and create a new
role to add users.

--- a/roles/base/templates/sshd_config.j2
+++ b/roles/base/templates/sshd_config.j2
@@ -13,4 +13,4 @@ X11Forwarding no
 PermitUserEnvironment no
 
 PrintMotd no
-Subsystem sftp /usr/lib/openssh/sftp-server
+Subsystem sftp {{ sftp_path }}
