Enable code search in Gitea, re-fix dotfiles_copy

--- a/roles/docker_server/templates/apps-docker-compose.yml.j2
+++ b/roles/docker_server/templates/apps-docker-compose.yml.j2
@@ -95,6 +95,7 @@ services:
       - USER_GID=1000
       - GITEA__SERVICE__DISABLE_REGISTRATION=true
       - GITEA__MIGRATIONS__ALLOW_LOCALNETWORKS=true
+      - GITEA__INDEXER__REPO_INDEXER_ENABLED=true
 
     volumes:
       - /ssd/app/gitea:/data
