--- a/roles/pve_networking/templates/interfaces-pve01.j2
+++ b/roles/pve_networking/templates/interfaces-pve01.j2
@@ -6,7 +6,7 @@ iface lo inet loopback
 allow-hotplug enp2s0f0
 iface enp2s0f0 inet manual
 
-# Managemnt VLAN interface for Proxmox itselfs
+# Managemnt VLAN interface for Proxmox itself
 auto vmbr0.2
 iface vmbr0.2 inet static
     # Depends on the Ansible controller being able to resolve the IP of the
